# iron-golem

./: README.md  pyproject.toml
.github/workflows/: publish.yml
irongolem-lib/: build.gradle  settings.gradle
irongolem-lib/src/main/java/io/irongolem/: IronGolem.java  TestContext.java
irongolem-lib/src/main/java/io/irongolem/actions/: BlockActions.java  InventoryActions.java  PlayerActions.java  WorldActions.java
irongolem-lib/src/main/java/io/irongolem/assertions/: BlockAssertions.java  EffectAssertions.java  GuiAssertions.java  InventoryAssertions.java  NBTAssertions.java
irongolem-lib/src/main/java/io/irongolem/queries/: BlockStateQuery.java  InventoryQuery.java  NBTQuery.java
skills/: AGENTS.md  README.md  SKILL.md
src/irongolem/: __init__.py  __main__.py  cli.py  output.py
src/irongolem/_resources/templates/fabric/: build.gradle.template  gradle.properties.template  settings.gradle.template
src/irongolem/_resources/templates/fabric/src/main/resources/: fabric.mod.json.template
src/irongolem/_resources/templates/neoforge/: build.gradle.template
src/irongolem/commands/: __init__.py  build.py  discover.py  doctor.py  init.py  test.py
src/irongolem/discovery/: scanner.py
src/irongolem/gradle/: __init__.py  detector.py  parser.py  runner.py
src/irongolem/server/: __init__.py  lifecycle.py  log_parser.py
tests/: test_cli.py  test_discovery.py  test_gradle_parser.py  test_log_parser.py
tests/fixtures/: sample_build_output.txt  sample_crash_report.txt  sample_gametest_log.txt
(+2 files in other folders)
