[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "irongolem"
version = "0.1.0"
description = "Headless Minecraft mod testing harness for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Jason" }
]
keywords = ["minecraft", "modding", "testing", "gametest", "neoforge", "fabric"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
irongolem = "irongolem.__main__:main"

[project.urls]
Repository = "https://github.com/jtbsllc/irongolem"

[tool.hatch.build.targets.wheel]
packages = ["src/irongolem"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
